<?xml version="1.1" encoding="utf-8"?>
<resources>
    <!-- This file is generated by string converter tool. -->
    <!-- Source: https://docs.google.com/spreadsheets/d/1y71DyM31liwjcAUuPIk3CuIqxJD2l9Y2Q-YZ0I0XE_E/export?format=csv#gid=0 -->
    <!-- Language: English -->
    
    <!-- Common -->
    <string name="app_summary">Access online storage</string>
    <string name="general_accept">OK</string>
    <string name="general_close">Close</string>
    <string name="general_warning">Attention</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_delete">Delete</string>
    <string name="general_back">Back</string>
    <string name="general_copy_clipboard_message">Copied to clipboard.</string>
    
    <!-- Home Screen -->
    <string name="home_open_file">Open</string>
    <string name="home_open_settings">Settings</string>
    <string name="home_open_file_ng_message">Add any connection.</string>
    <string name="home_add_connection_input">Input</string>
    <string name="home_add_connection_search">Search</string>
    
    <!-- Edit Screen -->
    <string name="edit_title">Connection</string>
    <string name="edit_id_title">ID</string>
    <string name="edit_id_hint">Unique string (no \&quot;:\&quot;, \&quot;/\&quot;)</string>
    <string name="edit_name_title">Name</string>
    <string name="edit_name_hint">Host name if empty</string>
    <string name="edit_storage_title">Storage</string>
    <string name="edit_settings_section_title">Settings</string>
    <string name="edit_domain_title">Domain</string>
    <string name="edit_domain_hint">Input as needed</string>
    <string name="edit_host_title">Host</string>
    <string name="edit_host_hint">IP Address / Host</string>
    <string name="edit_host_select_a11y">Browse</string>
    <string name="edit_port_title">Port</string>
    <string name="edit_port_hint">Default if empty</string>
    <string name="edit_enable_dfs_label">Enable DFS (Distributed File System)</string>
    <string name="edit_enable_encryption_label">Enable Encryption</string>
    <string name="edit_directory_search_a11y">Browse</string>
    <string name="edit_user_title">User</string>
    <string name="edit_user_hint">Invalid if anonymous</string>
    <string name="edit_password_title">Password</string>
    <string name="edit_password_hint">Invalid if anonymous</string>
    <string name="edit_anonymous_label">Anonymous</string>
    <string name="edit_key_title">Private Key</string>
    <string name="edit_key_hint">Private Key</string>
    <string name="edit_key_text_none">Unused</string>
    <string name="edit_key_text_file">File referenced</string>
    <string name="edit_key_text_import">Imported</string>
    <string name="edit_key_input_none">Unused</string>
    <string name="edit_key_input_file">Refer to file</string>
    <string name="edit_key_input_import_file">Import file</string>
    <string name="edit_key_input_import_text">Enter and import</string>
    <string name="edit_passphrase_title">Private key passphrase</string>
    <string name="edit_passphrase_hint">Not entered if not set</string>
    <string name="edit_ignore_known_hosts_label">Do not check SSH trusted hosts</string>
    <string name="edit_encoding_title">Character Code</string>
    <string name="edit_ftp_mode_title">Active Mode</string>
    <string name="edit_ftps_implicit_label">Implicit SSL/TLS Mode</string>
    <string name="edit_folder_title">Folder</string>
    <string name="edit_folder_hint">\&quot;/\&quot; if empty</string>
    <string name="edit_option_section_title">Option</string>
    <string name="edit_option_safe_transfer_label">Safe data transfer</string>
    <string name="edit_option_read_only_label">Read only</string>
    <string name="edit_option_extension_label">Add extension when saving</string>
    <string name="edit_option_thumbnail_label">Thumbnail</string>
    <string name="edit_option_thumbnail_image">Image</string>
    <string name="edit_option_thumbnail_audio">Audio</string>
    <string name="edit_option_thumbnail_video">Video</string>
    <string name="edit_option_thumbnail_disabled">Disabled</string>
    <string name="edit_info_section_title">Information</string>
    <string name="edit_storage_uri_title">Storage URI</string>
    <string name="edit_provider_uri_title">Shared URI</string>
    <string name="edit_check_connection_button">Check connection</string>
    <string name="edit_check_connection_ok_message">Connection successful.</string>
    <string name="edit_check_connection_wn_message">Settings has an error.</string>
    <string name="edit_check_connection_ng_message">Connection failed.</string>
    <string name="edit_check_save_ng_input_message">Name and host are required.</string>
    <string name="edit_check_save_ng_invalid_id_message">ID is invalid.</string>
    <string name="edit_check_save_ng_duplicate_id_message">ID is duplicated.</string>
    <string name="edit_check_key_ng_failed_messaged">Failed to access the private key.</string>
    <string name="edit_check_key_ng_invalid_messaged">Failed to read the private key.</string>
    <string name="edit_check_key_ok_messaged">The private key is valid.</string>
    <string name="edit_save_button">Save</string>
    <string name="edit_back_confirmation_message">Discard your changes?</string>
    <string name="edit_delete_confirmation_message">Delete this settings?</string>
    <string name="edit_warning_key_import_message">The imported secret key is not guaranteed.\nPlease be careful when handling.</string>
    <string name="edit_warning_known_host_message">The configured SSH destination has been connected for the first time or the key has been changed. \nDo you want to trust the destination and connect?</string>
    
    <!-- Host Screen -->
    <string name="host_title">Host</string>
    <string name="host_set_manually">Set manually</string>
    <string name="host_select_confirmation_message">Input selected data to edit form.</string>
    <string name="host_select_host_name">Host Name</string>
    <string name="host_select_ip_address">IP Address</string>
    <string name="host_sort_button">Sort</string>
    <string name="host_reload_button">Reload</string>
    <string name="host_sort_type_detection_ascend">Detection (Ascend)</string>
    <string name="host_sort_type_detection_descend">Detection (Descend)</string>
    <string name="host_sort_type_host_name_ascend">Host Name (Ascend)</string>
    <string name="host_sort_type_host_name_descend">Host Name (Descend)</string>
    <string name="host_sort_type_ip_address_ascend">IP Address (Ascend)</string>
    <string name="host_sort_type_ip_address_descend">IP Address (Descend)</string>
    
    <!-- Folder Screen -->
    <string name="folder_title">Folder</string>
    <string name="folder_set">Set Folder</string>
    <string name="folder_reload_button">Reload</string>
    <string name="folder_list_empty">No sub folders</string>
    
    <!-- Settings Screen -->
    <string name="settings_title">Settings</string>
    <string name="settings_section_set">Settings</string>
    <string name="settings_set_theme">Theme</string>
    <string name="settings_set_language">Language</string>
    <string name="settings_open_file_limit">Open file limit\n(App restart required)</string>
    <string name="settings_set_use_foreground">Show notification when opening files</string>
    <string name="settings_set_use_as_local">Use as local storage\n(Device reboot required)</string>
    <string name="settings_section_transfer">Import / Export</string>
    <string name="settings_transfer_export">Export connection settings</string>
    <string name="settings_transfer_export_dialog_password">Password (1-32 characters)</string>
    <string name="settings_transfer_export_dialog_check">Export target</string>
    <string name="settings_transfer_export_dialog_button">Export</string>
    <string name="settings_transfer_export_message">%1$d data exported.</string>
    <string name="settings_transfer_export_error">Failed to export data.</string>
    <string name="settings_transfer_import">Import connection settings</string>
    <string name="settings_transfer_import_dialog_password">Password (1-32 characters)</string>
    <string name="settings_transfer_import_dialog_option_replace">Replace all data</string>
    <string name="settings_transfer_import_dialog_option_duplicate">ID duplicate data</string>
    <string name="settings_transfer_import_dialog_option_overwrite">Overwrite</string>
    <string name="settings_transfer_import_dialog_option_ignore">Ignore</string>
    <string name="settings_transfer_import_dialog_option_append">Change ID (Change Shared URI)</string>
    <string name="settings_transfer_import_dialog_button">Import</string>
    <string name="settings_transfer_import_message">%1$d data imported.</string>
    <string name="settings_transfer_import_error">Failed to import data.</string>
    <string name="settings_section_info">Information</string>
    <string name="settings_info_known_hosts">SSH trusted hosts</string>
    <string name="settings_info_known_hosts_host">Host</string>
    <string name="settings_info_known_hosts_type">Key type</string>
    <string name="settings_info_known_hosts_key">Key</string>
    <string name="settings_info_known_hosts_delete_confirmation_message">Do you want to remove this host?</string>
    <string name="settings_info_libraries">Libraries</string>
    <string name="settings_info_contributors">Contributors</string>
    <string name="settings_info_app">App</string>
    
    <!-- Send Screen -->
    <string name="send_title">File Transfer</string>
    <string name="send_close_button">Close</string>
    <string name="send_action_cancel">Cancel</string>
    <string name="send_action_retry">Retry</string>
    <string name="send_action_remove">Remove</string>
    <string name="send_state_ready">Ready</string>
    <string name="send_state_overwrite">File exists</string>
    <string name="send_state_success">Success</string>
    <string name="send_state_failure">Failure</string>
    <string name="send_state_cancel">Cancelled</string>
    <string name="send_exit_confirmation_message">Cancel all transfers and exit the app.</string>
    <string name="send_overwrite_confirmation_message">Overwrite %1$d files.</string>
    
    <!-- DocumentsProvider -->
    <string name="provider_error_message">An error was occurred.</string>
    
    <!-- Notification -->
    <string name="notification_channel_name_provider">File Open</string>
    <string name="notification_title_provider">Opening file</string>
    <string name="notification_channel_name_send">Data Transfer</string>
    <string name="notification_title_send_completed">Completed</string>
    
    <!-- Theme Enum -->
    <string name="enum_theme_default">Default</string>
    <string name="enum_theme_light">Light</string>
    <string name="enum_theme_dark">Dark</string>
</resources>
