<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.wa2c.android.cifsdocumentsprovider.presentation.ui.settings.SettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:divider="@drawable/img_divider"
                android:orientation="vertical"
                android:showDividers="middle|end">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/settings_section_set"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                <TextView
                    android:id="@+id/settings_theme_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="64dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/settings_set_theme"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/settings_language_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="64dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/settings_set_language"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <CheckBox
                    android:id="@+id/settings_use_as_local_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:button="@null"
                    android:checked="@={ viewModel.useAsLocal }"
                    android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center_vertical"
                    android:minHeight="64dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/settings_set_use_as_local"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:divider="@drawable/img_divider"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:showDividers="middle|end">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="8dp"
                    android:text="@string/settings_section_info"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                <TextView
                    android:id="@+id/settings_contributor_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="64dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/settings_info_contributors"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/settings_library_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="64dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/settings_info_libraries"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/settings_info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:minHeight="64dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/settings_info_app"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>
